made subtitles work on IE8, fixes #31

--- a/skin/styl/core/player.styl
+++ b/skin/styl/core/player.styl
@@ -105,9 +105,10 @@
          font-weight bold
 
    .fp-speed
-      font-size 400%
+      font-size 30px
       background-color #3
-      color #Ee
+      background-color rgba(#3, .8)
+      color #e
       margin 0 auto
       text-align center
       width 120px
